<resources>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="app_name">Cinecartaz</string>
    <string name="dashboard">Dashboard</string>
    <string name="apresentacao">Apresentação</string>
    <string name="adicionar">Adicionar</string>
    <string name="avaliacao">Avaliação:</string>
    <string name="imagens_do_filme">Imagens do filme.</string>
    <string name="geral">Geral</string>
    <string name="visualizacao">Visualização</string>
    <string name="ver_mais">Ver Mais…</string>
    <string name="ver_menos">Ver Menos…</string>
    <string name="submeter">Submeter</string>
    <string name="filmes_vistos">Filmes vistos</string>
    <string name="cinemas_visitados">Cinemas visitados</string>
    <string name="cinema_mais_visitado">Cinema mais visitado</string>
    <string name="genero_mais_visto">Género mais visto</string>
    <string name="total_de_avaliacoes">Total de avaliaçōes:</string>
    <string name="filme">Filme</string>
    <string name="cinema">Cinema</string>
    <string name="data">Data</string>
    <string name="observacao">Observação</string>
</resources>