<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.CreateFragment"
        android:padding="16dp"
        android:orientation="vertical">
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/titulo_filme_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:hint="@string/filme" >
            <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                android:id="@+id/titulo_filme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/nome_cinema_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="15dp"
            android:hint="@string/cinema" >
            <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                android:id="@+id/nome_cinema"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <SeekBar
            android:id="@+id/avaliacao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:progressTint="@color/colorPrimary"
            android:thumbTint="@color/colorPrimary"
            android:min="1"
            android:max="10" />
        <TextView
            android:id="@+id/avaliacao_valor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_marginBottom="10dp"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/data" >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/data_i"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/observacoes_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:hint="@string/observacao" >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/observacao"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginVertical="10dp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/classificacao_etaria_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:hint="Grau de idade" >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/classificacao_etaria"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginVertical="10dp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:orientation="horizontal"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_margin="10dp"
                android:text="Deseja adicionar uma imagem?"/>

            <ImageButton
                android:id="@+id/image_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/baseline_image_search_24"/>
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/fotos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/submeter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/colorPrimary"
            android:layout_marginVertical="16dp"
            android:textAllCaps="false"
            android:textStyle="normal"
            android:background="@drawable/submit_button"
            android:text="@string/submeter"/>

    </LinearLayout>
</ScrollView>
