<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.DashboardFragment"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="4"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_weight="2"
            android:background="@drawable/dashboad_box"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/total_filmes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:textSize="25sp"
                android:textColor="@color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="@color/lightGray"
                android:textSize="11sp"
                android:text="@string/filmes_vistos"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_weight="2"
            android:background="@drawable/dashboad_box"
            android:layout_margin="10dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/total_cinemas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:textSize="25sp"
                android:textColor="@color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="@color/lightGray"
                android:textSize="11sp"
                android:text="@string/cinemas_visitados"/>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="4"
        android:orientation="horizontal"
        android:baselineAligned="false">
         <LinearLayout
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_weight="2"
            android:background="@drawable/dashboad_box"
            android:layout_margin="10dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/cinema_mais_visitado"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:gravity="center"
                android:textSize="20sp"
                android:textColor="@color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="@color/lightGray"
                android:textSize="11sp"
                android:text="@string/cinema_mais_visitado"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_weight="2"
            android:background="@drawable/dashboad_box"
            android:layout_margin="10dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/genero_mais_visto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="@color/lightGray"
                android:textSize="11sp"
                android:text="@string/genero_mais_visto"/>

        </LinearLayout>
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/lista_filmes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"/>

</LinearLayout>